style.css
body, h1, h2, h3, p {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: rgb(43, 244, 43);
}

body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: #f5f5f5;
}

.navbar-container {
  max-width: 1200px;
  margin: 0 auto;
  padding: .25rem;
}

.navbar {
  background: rgb(2,0,36);
  background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 45%);
    color: #fff;
    font-size: 1.25rem;
    font-weight: bold;
    text-transform: uppercase;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 3px 0;
}

.mobile-menu {
    font-size: 24px;
    font-weight: bold;
    display: none;
}

.mobile-menu-content {
  display: none;
}

.menu {
  display: flex;
  list-style: none;
  justify-content: right;
}

.menu li {
  margin-right: 20px;
}

.menu a {
    text-decoration: none;
    color: #fff;
    transition: color 0.3s ease;
    padding: 20px;
}

.menu a:hover {
  color: #ad4ad5;
  cursor:pointer;
}

.content-section {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: rgba(70, 26, 128, 0.733) 0%;
  color: rgba(255, 255, 255, 0.943);
  font-weight: 600;
  width: auto;
  margin-top: 1.5rem;
  z-index: 1;
}

.content-section p {
  margin: .5rem;
}

.column {
  display: flex;
  flex-direction: column;
  margin: 1rem;
  padding: 1rem;
  flex: 1;
}

.column h3 {
  text-align: center;
  font-size: 2rem;
}

.column-left {
  order: 1;
}

.column-right {
  order: 2;
}

.preview {
  flex-direction: row;
  display: flex;
  justify-content: right;
  padding: .5rem;
}

.preview a i {
  color: purple;
  padding: 5px;
  font-size: 24px;
}

.preview img {
  position: absolute;
  right: -25rem;
  top: -4.5rem;
  transform: scale(.55);
}

.hero {
    color: #804FB3;
    height: 35rem;
    font-weight: 800;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 6rem 0 20px;
    overflow: hidden;
    user-select: none;
}

.hero h1 {
  font-size: 4rem;
  margin-bottom: .75rem;
  text-transform: uppercase;
}

.hero p {
  font-size: 2.5rem;
}

.clouds {
  position: absolute;
  top: 0;
  left: 0;
  width: 6500px;
  height: 100%;
  background: url('/media/clouds.png');
  opacity: 0.4;
  animation: scrollClouds 320s linear infinite;
  z-index: -1;
}

@keyframes scrollClouds {
    0%, 100% {
      transform: translateX(0);
    }
    50% {
      transform: translateX(-3250px);
    }
}

footer {
  background: rgb(2,0,36);
  background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 100%);
  color: #fff;
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: .5rem 0;
  box-sizing: border-box;
}

.social-links {
  list-style: none;
  padding: 0;
  margin-bottom: 10px;
}

.social-links li {
  display: inline-block;
  margin-right: 10px;
}

.social-links a {
    color: #fff;
    font-size: 24px;
}

@media screen and (max-width: 766px) {
    .desktop {
        display: none;
    }

    .navbar-container {
      padding: 1.1rem;
    }

    .mobile-menu {
        display: block;
    }

    .mobile-menu-content {
      display: none;
      position: absolute;
      top: 0; 
      left: 0;
      width: 100%;
      height: 100vh;
      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
      z-index: 1; 
    }
    
    .mobile-menu-content.active {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      gap: 3rem;
      background-color: rgba(92,51,142,1); 
    }

    a {
      color: white;
      filter: drop-shadow(2px 2px 1px black);
      font-size: 2rem;
    }

    .hero {
      position: relative;
      height: 76vh;

      overflow-y: hidden;
      overflow-x: hidden;
    }

    footer {
      position: relative;
      bottom: 0;
    }

}

